templates/elastalert-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elastalert
spec:
  selector:
    app: elastalert
  ports:
    - port: 3030
      targetPort: 3030
