templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fixpanel-kibana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - fixpanel.org
      secretName: letsencrypt-prod-tls
  rules:
    - host: fixpanel.org
      http:
        paths:
          - backend:
              serviceName: kf-kibana
              servicePort: 5601
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fixpanel-elasticsearch-post-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
    - hosts:
        - fixpanel.org
      secretName: letsencrypt-prod-tls
  rules:
    - host: fixpanel.org
      http:
        paths:
          - path: "/mobile-index/_doc"
            backend:
              serviceName: elasticsearch-master
              servicePort: 9200
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fixpanel-fleet-ui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - fleet.fixpanel.org
      secretName: letsencrypt-prod-tls
  rules:
    - host: fleet.fixpanel.org
      http:
        paths:
          - backend:
              serviceName: kf-kolide-fleet
              servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fixpanel-fleet-grpc-agent-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
  tls:
    - hosts:
        - fleet.fixpanel.org
      secretName: letsencrypt-prod-tls
  rules:
    - host: fleet.fixpanel.org
      http:
        paths:
          - path: "/kolide.agent.Api"
            backend:
              serviceName: kf-kolide-fleet
              servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fixpanel-fleet-grpc-targets-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
  tls:
    - hosts:
        - fleet.fixpanel.org
      secretName: letsencrypt-prod-tls
  rules:
    - host: fleet.fixpanel.org
      http:
        paths:
          - path: "/kolide.launcher.QueryTarget/GetTargets"
            backend:
              serviceName: kf-kolide-fleet
              servicePort: 8080
---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: fixpanel-websocket-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#       proxy_http_version 1.1;
#       proxy_set_header Upgrade "websocket";
#       proxy_set_header Connection "Upgrade";
# spec:
#   tls:
#     - hosts:
#         - fleet.fixpanel.org
#       secretName: letsencrypt-staging-tls
#   rules:
#     - host: fleet.fixpanel.org
#       http:
#         paths:
#           - path: "/api/v1/kolide/results/"
#             backend:
#               serviceName: kf-kolide-fleet
#               servicePort: 8080
